examples/test/testpolicy19726.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19726
  namespace: namespace280
spec:
  podSelector:
    matchLabels:
      key18: value20
      key27: value33
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key32: value37
          key38: value29
      podSelector:
        matchLabels:
          key41: value34
          key11: value24
          key21: value48
